applications/xihe-test-v2/internal-server/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: xihe-ingress
  namespace: xihe-test-v2
spec:
  rules:
  - host: xihe-internal-server2.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: service-internal-server
          servicePort: 8000
        path: /
  tls:
  - hosts:
    - xihe-internal-server2.test.osinfra.cn
    secretName: xihe-test-osinfra-cn-tls
